--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
+    "ant-design-vue": "^4.1.2",
     "axios": "^1.6.8",
     "crypto-js": "^4.2.0",
     "pinia": "^2.1.7",
@@ -18,6 +20,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.1.6"
   }
 }
