--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ant-design-vue": "^4.1.2",
     "axios": "^1.6.8",
     "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.10",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
